test/classes/ferguson/delete-free/unique3.good
unique3.chpl:16: In function 'test':
unique3.chpl:25: error: copy-initialization invoked for a type that does not have a copy initializer
